force-app/main/default/objects/Launchpad__Job__c/Launchpad__Job__c.object-meta.xml
<CustomObject>
    <description>This Object is used by Employers to create Job positions that are open for hire.</description>
    <label>Job</label>
    <nameField>
        <label>Job Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>