force-app/main/default/objects/Launchpad__Job__c/fields/Gender_Served__c.field-meta.xml
<CustomField>
    <fullName>Gender_Served__c</fullName>
    <inlineHelpText>If only one gender served</inlineHelpText>
    <label>Gender Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>