force-app/main/default/objects/Launchpad__Job__c/fields/Genders_Served__c.field-meta.xml
<CustomField>
    <fullName>Genders_Served__c</fullName>
    <label>Genders Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>