force-app/main/default/objects/Launchpad__Job__c/fields/Grades_Served__c.field-meta.xml
<CustomField>
    <fullName>Grades_Served__c</fullName>
    <label>Grades Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grades</valueSetName>
    </valueSet>
</CustomField>