force-app/main/default/objects/Launchpad__Job__c/fields/Interest_Areas__c.field-meta.xml
<CustomField>
    <fullName>Interest_Areas__c</fullName>
    <label>Interest Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>