force-app/main/default/objects/Launchpad__Job__c/fields/Job_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Address__c</fullName>
    <formula>Placement_Site__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Site Address</label>
    <type>Text</type>
</CustomField>