force-app/main/default/objects/Launchpad__Job__c/fields/Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weeks__c</fullName>
    <label># of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>