force-app/main/default/objects/Launchpad__Job__c/fields/Placement_Site__c.field-meta.xml
<CustomField>
    <fullName>Placement_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Placement Site)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>