force-app/main/default/objects/Launchpad__Job__c/fields/Placement_Site_of_Slots__c.field-meta.xml
<CustomField>
    <fullName>Placement_Site_of_Slots__c</fullName>
    <label>Placement Site # of Slots DEFUNCT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>