force-app/main/default/objects/Launchpad__Job__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>