force-app/main/default/objects/Launchpad__Job__c/fields/Schools_Served__c.field-meta.xml
<CustomField>
    <fullName>Schools_Served__c</fullName>
    <inlineHelpText>Only select schools if this Job is not applicable to all schools.</inlineHelpText>
    <label>Schools Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schools</valueSetName>
    </valueSet>
</CustomField>