force-app/main/default/objects/Launchpad__Job__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <inlineHelpText>Select an Option</inlineHelpText>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. PD:  Career Exploration</fullName>
            </value>
            <value>
                <fullName>2. PD:  Financial Management</fullName>
            </value>
            <value>
                <fullName>3. PD: Skill Building</fullName>
            </value>
            <value>
                <fullName>4. Placement: Internship</fullName>
            </value>
            <value>
                <fullName>5. Placement:  Project Based Learning</fullName>
            </value>
            <value>
                <fullName>6. Placement: Service Learning</fullName>
            </value>
            <value>
                <fullName>7. Supportive: Transportation</fullName>
            </value>
            <value>
                <fullName>8. Supportive:  Vital Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>