force-app/main/default/objects/Launchpad__Job__c/validationRules/Launchpad__Hourly_Wage_Minimum_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Launchpad__Hourly_Wage_Minimum_Value</fullName>
    <active>true</active>
    <description>Hourly Wage Minimum should be less than Hourly Wage Maximum.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Launchpad__Hourly_Wage_Minimum__c)),
    Launchpad__Hourly_Wage_Minimum__c &gt;  Launchpad__Hourly_Wage_Maximum__c)</errorConditionFormula>
    <errorMessage>Hourly Wage Minimum should be less than Hourly Wage Maximum.</errorMessage>
</ValidationRule>