force-app/main/default/objects/Launchpad__Job__c/listViews/Launchpad__All.listView-meta.xml
<ListView>
    <fullName>Launchpad__All</fullName>
    <columns>NAME</columns>
    <columns>Launchpad__Account__c</columns>
    <columns>Launchpad__Employment_Type__c</columns>
    <columns>Launchpad__Closing_Date__c</columns>
    <columns>Launchpad__Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>