force-app/main/default/objects/Launchpad__Job__c/listViews/Launchpad__Open_Jobs.listView-meta.xml
<ListView>
    <fullName>Launchpad__Open_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Launchpad__Account__c</columns>
    <columns>Launchpad__Employment_Type__c</columns>
    <columns>Launchpad__Closing_Date__c</columns>
    <columns>Launchpad__Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Launchpad__Stage__c</field>
        <operation>notEqual</operation>
        <value>Placement,Closed/Lost</value>
    </filters>
    <label>Open Jobs</label>
</ListView>